2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b184

	* Fix: poll_properties and reset_votes

2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b183

	* Fix: Set Nested Properties

2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b182

	* Fix: Last second bug.  You can't empty() a function call.

2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b181

	* Fix: gallery_remote2 now works with GR, fix a lot of small PHP issues
	  (unquoted array refs, etc.)

	* Fix: Get rid of the ugly foreach loop and just make save_photos use $_FILES
	  directly

2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b180

	* Fix: variable typo in resize_photo

	* Fix: Don't try to use header() when debugging, because we've already sent text
	  (captionator)

2004-09-10  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b179

	* Fix: Caption options in upload via form was ignored.
	       Fixed with de-globalize setCaption in save_photos.php

2004-09-10  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b178

	* Change: Make "Layout" the first tab in Step3 of config.
		  This avoids confusing. Because is initially selected, but was 2nd tab.

	* Fix: Creating Subalbums did not work.
	       Fixed with de-globalize do_command a little more (parentName for subalbum)

2004-09-10  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b177

	* Fix: De-globalize sort_album.php, view_photo_properties.php, extra_fields.php

2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b176

	* Fix: Some popups in Mambo were still displaying inside the UI
	  because they were not built using 'type=popup' for makeGalleryURL

2004-09-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b175

	* Fix: Admin password correctly stored in config wiz.

2004-09-09  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b174

	* Fix: removed Warning in classes/Album.php

	* Fix: completed change albums permissions fix.
