@@ -1,3 +1,9 @@
+2004-09-11  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b185
+
+	* New: Added images/favicon.ico as favicon. Inserted via common_header()
+
+	* Change: Little html output beautify in albums.php and view_album.php
+
 2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b184
 
 	* Fix: poll_properties and reset_votes
